--- a/_config.yml
+++ b/_config.yml
@@ -148,6 +148,7 @@ markdown_ext: "markdown,mkdown,mkdn,mkd,md"
 
 # Conversion
 markdown: kramdown
+math: true
 highlighter: rouge
 lsi: false
 excerpt_separator: "\n\n"
