--- a/_config.yml
+++ b/_config.yml
@@ -148,6 +148,7 @@ markdown_ext: "markdown,mkdown,mkdn,mkd,md"
 
 # Conversion
 markdown: kramdown
+math: true
 highlighter: rouge
 lsi: false
 excerpt_separator: "\n\n"
@@ -164,6 +165,11 @@ kramdown:
   toc_levels: 1..6
   smart_quotes: lsquo,rsquo,ldquo,rdquo
   enable_coderay: false
+
+
+# Search
+search: true
+search_full_content: true
 
 
 # Sass/SCSS
