Team B Wiki Entry - Fall 2020

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -82,6 +82,8 @@ wiki:
         url: /wiki/sensing/opencv-stereo/
       - title: Camera-IMU Calibration using kalibr
         url: /wiki/sensing/camera-imu-calibration/
+      - title: RTK GPS
+	url: /wiki/sensing/gps/
   - title: Actuation
     url: /wiki/actuation/
     children:
@@ -250,6 +252,8 @@ wiki:
     children:
       - title: Planning Overview
         url: /wiki/planning/planning-overview/
+      - title: A* Planner Implementation Guide
+	url: /wiki/planning/astar_planning_implementation_guide/
 # Main links appear in the header.
 main:
   - title: Wiki
