Team F Wiki Entry - ROS Arduino Interface (#89)
* Update dji-drone-breakdown-for-technical-projects.md

* Deleted empty entry

* Adding ros arduino interface template

* Finished ROS Arduino Interface Article

* Added Ros Arduino Interface to navigation.yml

Also reordered ROS Introduction to be with the rest of the ROS entries.

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -13,8 +13,6 @@ wiki:
   - title: System Design & Development
     url: /wiki/system-design-development/
     children:
-      - title: Drone Flight Permissions
-        url: /wiki/system-design-development/drone-flight-permissions/
       - title: System Engineering
         url: /wiki/system-design-development/system-engineering/
       - title: Mechanical Design
@@ -43,12 +41,14 @@ wiki:
         url: /wiki/common-platforms/dji-sdk/
       - title: Pixhawk
         url: /wiki/common-platforms/pixhawk/
-      - title: ROS Introduction
-        url: /wiki/common-platforms/ros/ros-intro/
       - title: Asctec Pelican UAV Setup Guide
         url: /wiki/common-platforms/asctec-uav-setup-guide/
       - title: Husky Interfacing Procedure
         url: /wiki/common-platforms/husky_interfacing_and_communication/
+      - title: ROS Introduction
+        url: /wiki/common-platforms/ros/ros-intro/
+      - title: ROS Arduino Interface
+        url: /wiki/common-platforms/ros/ros-arduino-interface/
       - title: ROS Motion Server Framework
         url: /wiki/common-platforms/ros-motion-server-framework/
       - title: ROS Cost Maps
