Team A Fall Wiki Entry (#84)
* making first changes

* finished copying wiki article

* finished copying over wiki article

* Update resolved-rates.md

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -252,6 +252,8 @@ wiki:
     children:
       - title: Planning Overview
         url: /wiki/planning/planning-overview/
+      - title: Resolved Rates
+        url: /wiki/planning/resolved-rates/
 # Main links appear in the header.
 main:
   - title: Wiki
