Team B Wiki Entry - Fall 2020 (#90)
* Team B Wiki Entry - Fall 2020

* fixed white space in navigation file

* fixed assets path in a_star file

* fixed assets path in gps

Co-authored-by: bkjones <bkjones@andrew.cmu.edu>
Co-authored-by: Sean Bryan <15833919+smbryan@users.noreply.github.com>

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -82,6 +82,8 @@ wiki:
         url: /wiki/sensing/opencv-stereo/
       - title: Camera-IMU Calibration using kalibr
         url: /wiki/sensing/camera-imu-calibration/
+      - title: RTK GPS
+        url: /wiki/sensing/gps/
       - title: Intel Realsense
         url: /wiki/sensing/realsense/
   - title: Actuation
@@ -252,6 +254,8 @@ wiki:
     children:
       - title: Planning Overview
         url: /wiki/planning/planning-overview/
+      - title: A* Planner Implementation Guide
+        url: /wiki/planning/astar_planning_implementation_guide/
       - title: Resolved Rates
         url: /wiki/planning/resolved-rates/
 # Main links appear in the header.
