made changes to nav.yml;moved traj_extraction under wiki/sensing

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -62,6 +62,8 @@ wiki:
   - title: Sensing
     url: /wiki/sensing/
     children:
+      - title: Tracking vehicles using a static traffic camera
+        url: /wiki/sensing/trajectory_extraction/
       - title: Adafruit GPS
         url: /wiki/sensing/adafruit-gps/
       - title: AprilTags
