TEAM D WIKI Entry 2020 Fall (#91)
* TEAM D WIKI Entry 2020 Fall

* remove access date

* correct wrong path hiding exisiting page

* fix hyper link at first paragraph

* fix type

Co-authored-by: zhekai jin <jinzhekai0705@163.com>

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -102,10 +102,12 @@ wiki:
       - title: Pure Pursuit Controller for Skid Steering
         url: /wiki/actuation/Pure-Pursuit-Controller-for-Skid-Steering-Robot.md
   - title: Machine Learning
-    url: /wiki/deep-learning/custom-semantic-data
+    url: /wiki/machine-learning/
     children:
       - title: Custom data-set for segmentation
-        url: /wiki/actuation/motor-controller-feedback/
+        url: /wiki/machine-learning/custom-semantic-data/
+      - title: Python libraries for Reinforcement Learning
+        url: /wiki/machine-learning/python-libraries-for-reinforcement-learning/
   - title: State Estimation
     url: /wiki/state-estimation/
     children:
