--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -247,7 +247,9 @@ wiki:
       - title: Web-Based Visualization using ROS JavaScript Library
         url: /wiki/tools/roslibjs/
       - title: Gazebo Simulation
-        url: /wiki/common-platforms/gazebo-simulation/
+        url: /wiki/tools/gazebo-simulation/
+      - title: Code Editors - Introduction to VS Code and Vim
+        url: /wiki/tools/code-editors-Introduction-to-vs-code-and-vim/
   - title: Datasets
     url: /wiki/datasets/
     children:
