--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -252,6 +252,8 @@ wiki:
         url: /wiki/tools/gazebo-simulation/
       - title: Code Editors - Introduction to VS Code and Vim
         url: /wiki/tools/code-editors-Introduction-to-vs-code-and-vim/
+      - title: Qtcreator UI development with ROS
+        url: /wiki/tools/Qtcreator-ros/
   - title: Datasets
     url: /wiki/datasets/
     children:
