--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -23,6 +23,8 @@ wiki:
         url: /wiki/system-design-development/cable-management/
       - title: Subsystem Interface Modeling
         url: /wiki/system-design-development/subsystem-interface-modeling/
+      - title: In Loop Testing
+        url: /wiki/system-design-development/In-Loop-Testing/
   - title: Project Management
     url: /wiki/project-management/
     children:
