--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -75,6 +75,8 @@ wiki:
         url: /wiki/common-platforms/khepera4/
       - title: ROS 2 Navigation for Clearpath Husky
         url: /wiki/common-platforms/ros2-navigation-for-clearpath-husky/
+      - title: Hello Robot Stretch RE1
+        url: /wiki/common-platforms/hello-robot
   - title: Sensing
     url: /wiki/sensing/
     children:
