1. Add details about how to use and setup STag library for ROS 2. Add experimental results
Wiki Entry For TeamJ (Project DAIR)

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -72,6 +72,8 @@ wiki:
         url: /wiki/sensing/adafruit-gps/
       - title: AprilTags
         url: /wiki/sensing/apriltags/
+      - title: Stag
+        url: /wiki/sensing/stag/
       - title: Camera Calibration
         url: /wiki/sensing/camera-calibration/
       - title: Computer Vision Consideration
