Team C (MRSD 2022): Wrote wiki entry for introduction to MPC

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -109,6 +109,8 @@ wiki:
         url: /wiki/actuation/Pure-Pursuit-Controller-for-Skid-Steering-Robot.md
       - title: MoveIt Motion Planning and HEBI Actuator Setup and Integration
         url: /wiki/actuation/moveit-and-HEBI-integration.md
+      - title: Model Predictive Control Introduction and Setup
+        url: /wiki/actuation/model-predictive-control/
   - title: Machine Learning
     url: /wiki/machine-learning/
     children:
