Team D - Wiki Entry - Thermal Cameras (#122)
* Team D - Wiki Entry - Thermal Cameras - Check-in commit

* Team D - Wiki entry submission - Thermal Cameras

* Team D - Wiki Entry - Added date

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -94,6 +94,8 @@ wiki:
         url: /wiki/sensing/gps/
       - title: Intel Realsense
         url: /wiki/sensing/realsense/
+      - title: Thermal Cameras
+        url: /wiki/sensing/thermal-cameras/
   - title: Actuation
     url: /wiki/actuation/
     children:
