Team A: MRSD Wiki Entry (micro-ROS for ROS2 on Microcontrollers) (#126)
* copied template, created article link

* Updated intro

* Added section headers and wrote up initial installation overview + prerequisites

* microros installation options

* concept overview

* Arduino setup instructions

* Option 1 native installation

* Fixed in-document section links

* partway through docker

* docker instructions

* Testing installation

* Deleted excess template code

* See Also

* fix merge conflict in old sections

* Update microros-for-ros2-on-microcontrollers.md

* Update microros-for-ros2-on-microcontrollers.md

* typo

* Update microros-for-ros2-on-microcontrollers.md

* update list numbers in docker section

* Update microros-for-ros2-on-microcontrollers.md

* Updated title in navigation.yml

* Update microros-for-ros2-on-microcontrollers.md

* update example image for docker with port exposed

Co-authored-by: Alex Pletta <alexpletta@gmail.com>

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -194,7 +194,6 @@ wiki:
         url: /wiki/simulation/Spawning-and-Controlling-Vehicles-in-CARLA
       - title: NDT Matching with Autoware
         url: /wiki/simulation/NDT-Matching-with-Autoware/
-       
   - title: Interfacing
     url: /wiki/interfacing/
     children:
@@ -202,6 +201,8 @@ wiki:
         url: /wiki/interfacing/myo/
       - title: Blink(1) LED
         url: /wiki/interfacing/blink-1-led/
+      - title: micro-ROS for ROS2 on Microcontrollers
+        url: /wiki/interfacing/microros-for-ros2-on-microcontrollers/
   - title: Computing
     url: /wiki/computing/
     children:
