--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -147,7 +147,7 @@ wiki:
         url: /wiki/state-estimation/orb-slam2-setup/
       - title: Visual Servoing
         url: /wiki/state-estimation/visual-servoing/
-      - title: Cartographer SLAM ROS Integration 
+      - title: Cartographer SLAM ROS Integration
         url: /wiki/state-estimation/Cartographer-ROS-Integration/
   - title: Programming
     url:  /wiki/programming/
@@ -181,7 +181,7 @@ wiki:
         url: /wiki/networking/rocon-multi-master/
       - title: ROS over Multiple Machines
         url: /wiki/networking/ros-distributed/
-      - title: Setting up WiFi hotspot at the boot up for Linux devices 
+      - title: Setting up WiFi hotspot at the boot up for Linux devices
         url: /wiki/networking/wifi-hotspot/
   - title: Simulation
     url: /wiki/simulation/
@@ -241,6 +241,8 @@ wiki:
         url: /wiki/fabrication/cube-pro/
       - title: Series A Pro Printer
         url: /wiki/fabrication/series-A-pro/
+      - title: Ultimaker Series (3/S3)
+        url: /wiki/fabrication/ultimaker-series/
   - title: Math
     url: /wiki/math/
     children:
