[Team H] Added wiki entry for running ROS on an unsupported OS

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -65,6 +65,8 @@ wiki:
         url: /wiki/common-platforms/ros/ros-navigation/
       - title: ROS Global Planner
         url: /wiki/common-platforms/ros/ros-global-planner/
+      - title: Running ROS on unsupported OS
+        url: /wiki/common-platforms/ros/ros-unsupported-os
   - title: Sensing
     url: /wiki/sensing/
     children:
