[Team H (2023)] Added recommended changes

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -65,7 +65,7 @@ wiki:
         url: /wiki/common-platforms/ros/ros-navigation/
       - title: ROS Global Planner
         url: /wiki/common-platforms/ros/ros-global-planner/
-      - title: Running ROS on unsupported OS
+      - title: Running ROS On An Unsupported OS
         url: /wiki/common-platforms/ros/ros-unsupported-os
   - title: Sensing
     url: /wiki/sensing/
