[Team H (2023)] Added wiki entry for running ROS on an unsupported OS (#151)
[Team H] Added wiki entry for running ROS on an unsupported OS

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -65,6 +65,8 @@ wiki:
         url: /wiki/common-platforms/ros/ros-navigation/
       - title: ROS Global Planner
         url: /wiki/common-platforms/ros/ros-global-planner/
+      - title: Running ROS On An Unsupported OS
+        url: /wiki/common-platforms/ros/ros-unsupported-os
       - title: Making RC Vehicles Autonomous
         url: /wiki/common-platforms/rccars-the-complete-guide/
   - title: Sensing
