Troubleshooting Ubuntu Dual Boot Page (#149)
2023 Team G Wiki Entry Ubuntu Troubleshooting

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -232,6 +232,8 @@ wiki:
         url: /wiki/computing/ubuntu-chromebook/
       - title: Setup your GPU System for Computer Vision
         url: /wiki/computing/setup-gpus-for-computer-vision/
+      - title: Ubuntu Dual Boot and Troubleshooting Guide
+      	url: /wiki/computing/troubleshooting-ubuntu-dual-boot/
   - title: Fabrication
     url: /wiki/fabrication/
     children:
