--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -193,6 +193,8 @@ wiki:
         url: /wiki/networking/ros-distributed/
       - title: Setting up WiFi hotspot at the boot up for Linux devices 
         url: /wiki/networking/wifi-hotspot/
+      - title: Linux Packet Routing
+        url: /wiki/networking/linux-packet-routing.md
   - title: Simulation
     url: /wiki/simulation/
     children:
