TeamH task6.2 Wiki Entry

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -184,6 +184,8 @@ wiki:
         url: /wiki/programming/tutorials-resources/
       - title: Python Construct
         url: /wiki/programming/python-construct/
+      - title: ROS2 Action Servers for Ansynchronous Tasks
+        url: /wiki/programming/ros2-async-action-servers/
   - title: Networking
     url: /wiki/networking/
     children:
