Team B Unitree Go1 Pull Request (#154)
* Create unitree-go1.md

* Create docker-security.md

* Create azure-block-detection.md

* Add images

* Update navigation.yml

---------

Co-authored-by: Nevin Valsaraj <5763537+nevalsar@users.noreply.github.com>

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -45,6 +45,8 @@ wiki:
         url: /wiki/common-platforms/dji-drone-breakdown-for-technical-projects/
       - title: DJI SDK
         url: /wiki/common-platforms/dji-sdk/
+      - title: Unitree Go1
+        url: /wiki/common-platforms/unitree-go1/     
       - title: Pixhawk
         url: /wiki/common-platforms/pixhawk/
       - title: Asctec Pelican UAV Setup Guide
@@ -114,6 +116,8 @@ wiki:
         url: /wiki/sensing/robotic-total-stations.md
       - title: Thermal Cameras
         url: /wiki/sensing/thermal-cameras/
+      - title: Azure Block Detection
+        url: /wiki/sensing/azure-block-detection/
       - title: DWM1001 UltraWideband Positioning System
         url: /wiki/sensing/ultrawideband-beacon-positioning.md
   - title: Actuation
@@ -283,6 +287,8 @@ wiki:
     children:
       - title: Docker
         url: /wiki/tools/docker/
+      - title: Docker Security
+        url: /wiki/tools/docker-security
       - title: Docker for PyTorch
         url: /wiki/tools/docker-for-pytorch/
       - title: Vim
