Extra credit entries

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -79,6 +79,8 @@ wiki:
         url: /wiki/common-platforms/ros2-navigation-for-clearpath-husky/
       - title: Hello Robot Stretch RE1
         url: /wiki/common-platforms/hello-robot
+      - title: Kinova Arms
+        url: /wiki/common-platforms/kinova-setup-and-apis/
   - title: Sensing
     url: /wiki/sensing/
     children:
@@ -252,6 +254,8 @@ wiki:
         url: /wiki/computing/setup-gpus-for-computer-vision/
       - title: Ubuntu Dual Boot and Troubleshooting Guide
         url: /wiki/computing/troubleshooting-ubuntu-dual-boot/
+      - title: Quantum Computing and Qiskit
+        url: /wiki/computing/quantum/
   - title: Fabrication
     url: /wiki/fabrication/
     children:
