Team D: SMACH Library

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -200,6 +200,8 @@ wiki:
         url: /wiki/programming/tutorials-resources/
       - title: Python Construct
         url: /wiki/programming/python-construct/
+      - title: SMACH Library
+        url: /wiki/programming/smach-library/
   - title: Networking
     url: /wiki/networking/
     children:
