--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -10,8 +10,23 @@ wiki:
         url: /wiki/
       - title: Contribute
         url: /docs/index/
-      - title: Starting a Robotics Project
-        url: /docs/master_guide/
+  - title: Robotics Project Guide
+    url: /wiki/robotics-project-guide/master-guide/
+    children:
+      - title: Define your goals and requirements
+        url: /wiki/robotics-project-guide/define-your-goals-and-requirements/
+      - title: Choose a robot
+        url: /wiki/robotics-project-guide/choose-a-robot/
+      - title: Choose a language (or languages)
+        url: /wiki/robotics-project-guide/choose-a-language/
+      - title: Robot communication
+        url: /wiki/robotics-project-guide/choose-comm/
+      - title: Choose a simulator
+        url: /wiki/robotics-project-guide/choose-a-sim/
+      - title: Test and debug your robot
+        url: /wiki/robotics-project-guide/test-and-debug/
+      - title: Demo day!
+        url: /wiki/robotics-project-guide/demo-day/
   - title: System Design & Development
     url: /wiki/system-design-development/
     children:
@@ -368,8 +383,6 @@ docs:
         url: /wiki/
       - title: Contribute
         url: /docs/index/
-      - title: Starting a Robotics Project
-        url: /docs/master_guide/
   - title: Contribute
     children:
       - title: Introduction
