--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -21,6 +21,8 @@ wiki:
         url: /wiki/robotics-project-guide/choose-a-language/
       - title: Robot communication
         url: /wiki/robotics-project-guide/choose-comm/
+      - title: Choose peripherals
+        url: /wiki/robotics-project-guide/choose-peripherals/
       - title: Choose a simulator
         url: /wiki/robotics-project-guide/choose-a-sim/
       - title: Test and debug your robot
@@ -137,7 +139,7 @@ wiki:
         url: /wiki/sensing/azure-block-detection/
       - title: DWM1001 UltraWideband Positioning System
         url: /wiki/sensing/ultrawideband-beacon-positioning.md
-  - title: Actuation
+  - title: Controls & Actuation
     url: /wiki/actuation/
     children:
       - title: Motor Controller Feedback
