--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -174,6 +174,8 @@ wiki:
         url: /wiki/machine-learning/practical-guide-to-model-quantization-and-tensorrt-optimization.md
       - title: Installing YOLO on ARM Architecture Devices
         url: /wiki/machine-learning/installing-yolo-on-arm-architecture-devices.md
+      - title: Comprehensive guide to albumentations
+        url: /wiki/machine-learning/comprehensive-guide-to-albumentations.md
   - title: State Estimation
     url: /wiki/state-estimation/
     children:
